# spot_gab_server

./: .env  .env.sample  .gitignore  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt
_docker/python/: Dockerfile  Dockerfile.prod
app/: app.py  main.py
app/config/: logging_config.py
app/db/: db.py
app/db/migration/: env.py
app/resource/controller/: auth_controller.py  file_controller.py  index.html  post_controller.py  user_controller.py  user_location_controller.py
app/resource/depends/: depends.py
app/resource/exception/: handler.py
app/resource/i18n/: auth.en.json  auth.ja.json  common_error.en.json  common_error.ja.json
app/resource/middleware/: handler.py  header.py  http.py
app/resource/model/: __init__.py  email_verification.py  files.py  hash_tag_posts.py  hash_tags.py  locations.py  password_reset_verifications.py  post_images.py  posts.py  user_locations.py  users.py
app/resource/repository/: email_varification_repository.py  file_repository.py  hash_tag_repository.py  password_reset_verification_repository.py  post_repository.py  user_location_repository.py  user_repository.py
app/resource/request/: auth_request.py  common_validate.py  post_request.py  sign_up_request.py  user_location_request.py  user_request.py
app/resource/response/: auth_response.py  error_response.py  file_response.py  json_response.py  post_response.py  user_response.py
app/resource/service/: auth_service.py  file_service.py  post_service.py  user_location_service.py  user_service.py
app/resource/service_domain/: auth_service_domain.py  user_location_manager_service_domain.py
app/resource/templates/: faild-verify-email-en.html  faild-verify-email.html  faild-verify-en.html  faild-verify-ja.html  reset-password-en.html  reset-password-ja.html  success-reset-password-en.html  success-reset-password-ja.html  verify-email-en.html  verify-email-ja.html  verify-email.html
app/resource/util/: lang.py  logging.py
logs/: access.log.2024-02-05  access.log.2024-02-10  exception.log.2024-02-05
tests/: conftest.py
tests/feature/: conftest.py  test_auth_controller.py  test_user_controller.py
(+28 files in other folders)
